# asciimintjs

./: README.txt  config_sample.yaml  index.js  package-lock.json  package.json
lib/: my_docbooklatex.xsl
lib/asciidoc-to-asciidoc/: asciidoc-coalescer.rb
lib/asciimintjs/: abbreviation_preprocess_4html.js  citation_preprocess.js  farsi_preprocess.js  gulpfile copy.js  gulpfile.js
lib/asciimintjs gulp3  190502/: cfg.js
lib/asciimintjs gulp4 190502/: abbreviation_preprocess_4tex.js  gulpfile.js  logger.js  util.js
lib/dblatex/: COPYRIGHT  MANIFEST.in  setup.py
lib/docbook2tex/: docbook.regex.json  x.xsl
lib/fribidixetex/: INSTALLATION  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.status  configure  configure.ac  fribidixetex
lib/fribidixetex/autom4te.cache/: output.1  requests  traces.0  traces.1
lib/fribidixetex/src/.deps/: fribidixetex-bidi.Po  fribidixetex-dict.Po  fribidixetex-ignore.Po  fribidixetex-io.Po  fribidixetex-util.Po  fribidixetex.Po
styles/html/: docinfo-footer.html  docinfo.html  my.css  my_2015_12_25.css  my_rtl.css
styles/pdf/: my-theme.yml
styles/pres/: docinfo-footer.html  docinfo.html
styles/tex/: asciimint.blg  asciimint.sty  asciimint_article.tex  asciimint_article_fa.tex  asciimint_article_fa_a5.tex  asciimint_book.tex  asciimint_book_fa_a5.tex  asciimint_extension_biblatex.sty  asciimint_extension_index.sty  asciimint_extension_toc.sty  asciimint_farsi.tex  asciimint_graphic.tikz.tex  asciimint_graphics.sty  asciimint_graphics_pre.sty  asciimint_graphics_style.sty  asciimint_graphics_style_a.sty  (+5 more)
(+995 files in other folders)
